Fixed: Overflow issue in Chat Widget

--- a/client/src/components/ChatWidget/ChatWidget.scss
+++ b/client/src/components/ChatWidget/ChatWidget.scss
@@ -6,6 +6,7 @@
     justify-content: end;
     align-items: bottom;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .chat-messages {
